# ecs2json

./: .gitignore  README.md  ecs2json.py  main.py  pyproject.toml
data/FlsaProDb/: SdrApAlg30.mdb
data/access/: SdrBpAlg30.mdb  SdrBpAlgLib30.mdb  SdrColorsDyn30.mdb  SdrDowntimeReasons30.mdb  SdrEvtConfig30.ldb  SdrEvtConfig30.mdb  SdrIoDemo30.mdb  SdrIosConfig30.mdb  SdrLogConfig30.long  SdrLogConfig30.mdb  SdrLogConfig30.short  SdrNotep30.mdb  SdrNotep30.old  SdrOpcClientConfig30.mdb  SdrPLCParamsConfig30.mdb  SdrPntTextDyn30.mdb  SdrPntTextSta30.mdb  SdrPoint30.ldb  SdrReportCfg30.mdb  SdrSAAMUI.3.mdb  SdrSimS5Config30.mdb  SdrSimS5Config30_KP001585.md_  SdrSystem30.mdb  SdrTrendPack30.ldb  SdrTrendPack30.mdb  SdrUac30.mdb
